multi-api-w-cache-containers/kubernetes/publistapi.yml
apiVersion: v1
kind: Service
metadata:
  name: publist-api-svc
  labels:
    app: publist-api
  namespace: cnse
spec:
  ports:
    - port: 3080
  selector:
    app: publist-api
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publist-api
  labels:
    app: publist-api
  namespace: cnse
spec:
  selector:
    matchLabels:
      app: publist-api
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: publist-api
        tier: frontend
      namespace: cnse
    spec:
      hostname: publist
      containers:
      - image: architectingsoftware/cnse-publist-api:v1
        name: publist-api
        ports:
        - containerPort: 3080
          name: publist-api
        resources:
            limits:
              cpu: '500m'
              memory: '100Mi'
