multi-api-w-cache-containers/kubernetes/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cache-svc
  labels:
    app: api-cache
  namespace: cnse
spec:
  ports:
    - name: api-cache-port
      port: 6379
      targetPort: 6379
      protocol: TCP
    - name: api-cache-web
      port: 8001
      targetPort: 8001
      protocol: TCP
  selector:
    app: api-cache
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-cache
  labels:
    app: api-cache
  namespace: cnse
spec:
  selector:
    matchLabels:
      app: api-cache
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api-cache
        tier: frontend
      namespace: cnse
    spec:
      containers:
      - image: redis/redis-stack:latest
        name: cnse-api-cache
        ports:
        - name: api-cache-web
          containerPort: 8001
        - name: api-cache-port
          containerPort: 6379
        volumeMounts:
        - name: cache-persistent-storage
          mountPath: /data
        resources:
            limits:
              cpu: '750m'
              memory: '500Mi'

      volumes:
      - name: cache-persistent-storage
        persistentVolumeClaim:
          claimName: cache-pvc
